Fix z-index

--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,6 +1,6 @@
 .gallery {
     grid-area: gallery;
-    z-index: 1;
+    z-index: -1;
 }
 
 .gallery-wrapper {
